WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
314311
[GStreamer] media/media-vp8-hiddenframes.html fails
https://bugs.webkit.org/show_bug.cgi?id=314311
Summary
[GStreamer] media/media-vp8-hiddenframes.html fails
Carlos Garcia Campos
Reported
2026-05-07 03:17:57 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-05-07 23:30:26 PDT
This test case has a high fuzzy threshold.
> <meta name="fuzzy" content="maxDifference=3-207; totalPixels=27386-57600" />
If I remove this line, both UseSkiaForComposition on and off, actual results show the first frame. This test case expects the last frame. This bug is not a regression of UseSkiaForComposition. I think this is a GStreamer backend bug.
Philippe Normand
Comment 2
2026-05-08 05:30:51 PDT
I don't see any failure on
https://results.webkit.org/?suite=layout-tests&test=media%2Fmedia-vp8-hiddenframes.html&platform=GTK&platform=WPE
?
Fujii Hironori
Comment 3
2026-05-08 16:37:09 PDT
Needs to "export WEBKIT_USE_SKIA_FOR_COMPOSITION=1" or removing the fuzzy meta element at the moment. There are two problem. 1. the first frame is painted even though the last frame is expected 2. Looks a bit darker if Skia compositor is enabled I think this bug ticket should track the #1 problem because that's the main purpose of the test case.
Philippe Normand
Comment 4
2026-05-09 03:02:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/64612
EWS
Comment 5
2026-05-12 01:56:19 PDT
Committed
313064@main
(65523b157f07): <
https://commits.webkit.org/313064@main
> Reviewed commits have been landed. Closing PR #64612 and removing active labels.
EWS
Comment 6
2026-05-12 06:29:36 PDT
Committed
305877.495@webkitglib/2.52
(6df9adc0d72e): <
https://commits.webkit.org/305877.495@webkitglib/2.52
> Reviewed commits have been landed. Closing PR #64749 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug