[GStreamer] media/media-vp8-hiddenframes.html fails https://bugs.webkit.org/show_bug.cgi?id=314311

Reviewed by Xabier Rodriguez-Calvar.

Allow seeking to the exact duration. Manually verified by removing allowed fuzzyness on the test and
checking the last video frame is rendered instead of the first one. Fuzzy parameters were then
adjusted to accommodate with GStreamer's vpx decoder.

The test was also flaky on mac-intel. Ensuring the video is rendered after the seeked event fixed
it.

The following test performs a seek at duration for an Ogg file, which is poorly supported by
oggdemux, so keep the previous code, basically triggering EOS as was done before this patch, but
specially for this scenario:

imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/seeking/seek-to-max-value.htm

* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::doSeek):

Canonical link: https://commits.webkit.org/313064@main